# FloorPlan

./: README.md  pyproject.toml
data/: classes.txt
data/designer/: IMG_7047.json  IMG_7048.json  IMG_7050.json  IMG_7051.json  IMG_7052.json
data/floorplan/: IMG_5454.json  IMG_5455.json  IMG_5456.json  IMG_5457.json  IMG_5458.json  IMG_5459.json  IMG_5460.json  IMG_5462.json  IMG_5463.json  IMG_5464.json  IMG_5465.json  IMG_5467.json  IMG_5468.json  IMG_5469.json  IMG_5470.json  IMG_5471.json  IMG_5472.json  IMG_5473.json
docs/: README.md  prompt_optimization_guide.md
src/: detection.py  scale_detector.py
tests/: floorplan_detection_prompt.py  floorplan_detection_prompt_concise.py  floorplan_detection_prompt_optimized.py  floorplan_detection_prompt_visual.py  ocr_extract.py  scale_detection.py
